<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@drawable/main_bg"
    android:layout_height="match_parent"
    tools:context="in.co.mealman.mealman.Privacypolicy"
    android:weightSum="1">
    <ImageView
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbackbutton"
        android:src="@drawable/backico"
        android:layout_gravity="top|start"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Privacy Policy"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="#000"
        android:textSize="25sp"
        android:id="@+id/hprivacypolicy"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent"
            >
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/privacy_policy"
                />
            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Disclaimer"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1. Introduction"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/introduction"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2. Description of Service"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/introduction"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3. Copyright notice"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/copyright_notice"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4. Licence to use website"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/license_to_use_website"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="5. Acceptable use"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acceptable_use"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6. Third-Party Sites"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_partsites"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="7. Limited warranties"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/limited_warranties"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="8. Limitations and exclusions of liability"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lmtandexcofliability"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="9. Variation"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/variations"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="10. Severability"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/severibility"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="11. Limitation of Liability"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lmt_of_liability"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12. Law and jurisdiction"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/law_and_juris"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="13. Security Policy"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/security_policy"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="14. Our details"
                />
            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/our_details"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>